<resources>
    <string name="app_name">WORKSHOPAPP</string>
    <string name="job_booking">Job Booking</string>
    <string name = "labor_information">( Labor Information)</string>
    <string name="vehicle_imgs">Vehicle Images</string>
    <string name="cancel">Cancel</string>
    <string name="create_job_card">Create Job Card</string>
    <string name="booking_job">Booking job</string>
    <string name="sr_no">Sr. No.</string>
    <string name="spare_name">Spare Name</string>
    <string name="service_name">Service Name</string>
    <string name="qty">Qty</string>
    <string name="make">Make</string>
    <string name="job_concern">Job Concern</string>
    <string name="booking_information">( Booking Information )</string>
    <string name="next">Next</string>
    <string name="add_op">+</string>
    <string name="remove">Remove</string>
    <string name="add_rep">Add Representative</string>
    <string name="rep_name">Customer Representative Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="rep_contact">Representative Contact No.</string>
    <string name="contact_no">Contact No.</string>
    <string name="job_card_information">Job Card Information</string>
    <string name="to">To, </string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_contact">Customer Contact</string>
    <string name="customer_address">Customer Address</string>
    <string name="city_pin">City (PIN CODE)</string>
    <string name="job_card_number">Job Card Number</string>
    <string name="vehicle_registration_number">Vehicle Registration Number</string>
    <string name="sample_veh_no">MH00AB0000</string>
    <string name="chassis_number">Chassis Number</string>
    <string name="engine_number">Engine Number</string>
    <string name="model">Model</string>
    <string name="model_year">Model Year</string>
    <string name="kilometer_reading">Kilometer Reading</string>
    <string name="booking_date">Booking Date</string>
    <string name="last_service_date">Last Service Date</string>
    <string name="attended_by">Attended By</string>
    <string name="job_status">Job Status</string>
    <string name="spares_list">Spares List</string>
    <string name="service_list">Service List</string>
    <string name="note">Note</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="total_amount">Total Amount</string>
    <string name="sample_amt">00000.00</string>
    <string name="loading">Loading…</string>
</resources>
