<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="3dp">
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sr_no"
            android:textColor="@color/gray2"
            android:textSize="13sp"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/spare_name"
            android:textColor="@color/gray2"
            android:textSize="13sp"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1.4"
            android:text="@string/make"
            android:textColor="@color/gray2"
            android:textSize="13sp"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/qty"
            android:textColor="@color/gray2"
            android:textSize="13sp"/>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>