<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="5dp">

        <TextView
            android:id="@+id/srnotv"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/sr_no"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>
        <TextView
            android:id="@+id/item_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/job_concern"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>
        <ImageView
            android:id="@+id/delete_iv"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:padding="2dp"
            android:src="@drawable/close_icon"
            android:textColor="@color/colorPrimary"
            android:tint="#ff0000" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>