<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout"
    tools:context="com.tantransh.workshopapp.jobbooking.LaborInformationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.AppBarLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="55dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:onClick="back"
                        android:layout_height="30dp"
                        android:tint="@color/white"
                        android:src="@drawable/back_icon"
                        android:layout_gravity="center"
                        android:layout_width="30dp"
                        android:layout_marginStart="5dp"
                        android:contentDescription="@string/app_name" />
                    <LinearLayout
                        android:layout_marginEnd="35dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView

                            android:textStyle="bold"
                            android:gravity="center"
                            android:padding="3dp"
                            android:textSize="18sp"
                            android:text="@string/job_booking"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView

                            android:textStyle="normal"
                            android:gravity="center"
                            android:padding="0dp"
                            android:textSize="14sp"
                            android:text="@string/labor_information"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.design.widget.AppBarLayout>




            <TextView
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/vehicle_imgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/imagesRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/captureImageButton"
            android:src="@drawable/camera_icon"
            android:layout_marginBottom="55dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:tint="@color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_marginEnd="5dp"
            tools:ignore="RelativeOverlap" />

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <Button
                android:onClick="cancel"
                android:background="@android:color/transparent"
                android:textColor="@color/gray0"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/cancel"
                tools:ignore="ButtonStyle" />
            <Button
                android:onClick="moveNext"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/create_job_card"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/progressLO"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#44ffffff"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/booking_job"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>



</LinearLayout>
